--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<div class="row">
 		<div class="large-12 columns">
-			<h2>Welcome to Foundation</h2>
+			<h2>Zalli</h2>
 			<p>This is version 4.0.8.</p>
 			<hr />
 		</div>
