--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="large-12 columns">
 					<div class="panel">
-						<p>KLANGFORSCHER</p>
+						<p>zalli 2 bla bla bla.</p>
 					</div>
 				</div>
 			</div>
