--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<div class="row">
 				<div class="large-12 columns">
 					<div class="panel">
-						<p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+						<p>Lorem Ipsum</p>
 					</div>
 				</div>
 			</div>
