get size and length of zip download

--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@ color: '#FF5F41'
 
 </div>
 
-<span id="duration">3456364</span>
+
+
 
 
 <div class="downloadwrap">
 <div class="download">
-  <a href="/download/klangforscher.zip">Free Download<br />klangforscher.zip<br />7h |  250MB</a>
+  <a href="/download/klangforscher.zip">Download<br />klangforscher.zip<br />
+<span id="duration">03:41:52</span>
+    <br />
+<span id="filesize">201 MB</span>
+  </a>
 </div>
 </div>
