--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ color: '#FF5F41'
   <h1 id="fittext">{{ site.categories.event.first.date | date: "%d.%m."}} {{ site.categories.event.first.title }}</h1>
 </div>
 
-<div class="content">
+<div class="listwrap">
 
   <ul class="tracks">
   {% for post in site.categories.audio %}
