--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ color: '#FF5F41'
 </div>
 <div class="downloadwrap">
 <div class="download">
-  <a href="/download/klangforscher.zip">Download<br />Everything<br />
+  <a href="/mp3/klangforscher.zip">Download<br />Everything<br />
 <span id="duration">03:41:52</span>
     <br />
 <span id="filesize">201 MB</span>
