--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: start
 background: 'bbc9278a20a18260ebf45c63a838f570f505e0b6'
 color: '#FF5F41'
 ---
-<div class="intro"><h1 id="fittext">{{ site.categories.event.first.date | date: "%d.%m.%Y"}}<br />{{ site.categories.event.first.title }}</h1></div>
+<div class="intro"><h1 id="fittext">{{ site.categories.event.first.date | date: "%d.%m.%y"}}<br />{{ site.categories.event.first.title }}</h1></div>
 
