--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 background: 'bbc9278a20a18260ebf45c63a838f570f505e0b6'
 color: '#FF5F41'
-description: 'Synthesizer Scientist since 1995 | St.Gallen, Switzerland'
+description: 'Synthesizer Scientist since '95 | St.Gallen, Switzerland'
 ---
 <div class="intro"><h1 id="fittext">{{ site.categories.event.first.date | date: "%d.%m.%y"}}<br />{{ site.categories.event.first.title }}</h1></div>
 {% include nav.html %}
